# AcuTip-OpenChat-Project

./: .gitignore  Cargo.toml  README.md  config.prod.toml  config.toml  identity.pem  render.yaml
scripts/: setup_bot.sh
src/: config.rs  main.rs
src/commands/: alert.rs  alert_monitor.rs  dex.rs  mod.rs  price.rs
